fixed test and refactor duplicate logic and classes