@@ -2,19 +2,25 @@ package com.example.parqueaderoApi.security.config;
 
 import com.example.parqueaderoApi.entity.User;
 import lombok.AllArgsConstructor;
+import lombok.Data;
+import lombok.ToString;
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
 import java.util.Collections;
+import java.util.List;
 
 @AllArgsConstructor
+@Data
 public class UserDetailsImpl implements UserDetails{
 
     private final User user;
+
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return Collections.emptyList();
+        return List.of(new SimpleGrantedAuthority("admin"));
     }
 
     @Override
@@ -24,7 +30,7 @@ public class UserDetailsImpl implements UserDetails{
 
     @Override
     public String getUsername() {
-        return user.getEmail();
+        return null;
     }
 
     @Override
@@ -44,7 +50,7 @@ public class UserDetailsImpl implements UserDetails{
 
     @Override
     public boolean isEnabled() {
-        return true;
+        return false;
     }
 
     public String getNombre(){
